# SimWeight-experiment

./: .gitignore  README.md  debug.py  draft.py  extract_data.py  main.py  neg_sample.py  requirements.txt  rower_model.py  test.py  vis_map.py
utils_rs/: .gitignore  Cargo.toml  pyproject.toml  utils_rs.pyi
utils_rs/src/: lib.rs
weight_experiment/: Cargo.toml  pyproject.toml  weight_experiment.pyi
weight_experiment/src/: lib.rs
