[package]
name = "utils_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "utils_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.19.0"
pathfinding = { git="https://github.com/HellOwhatAs/pathfinding.git" }
ordered-float = "4.2.0"
rayon = "1.8"
rusqlite = { version = "0.30.0", features = ["bundled"] }
bincode = "1"
flate2 = "1.0"