[package]
name = "utils_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "utils_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.19.0"
ordered-float = "4.2.0"
pathfinding = { git="https://github.com/HellOwhatAs/pathfinding.git", tag = "version2" }
rayon = "1.8"